# agent-trace

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
agent_trace/: cli.py
agent_trace/adapters/: base.py  claude_code.py
agent_trace/core/: aggregate.py  events.py  storage.py
agent_trace/hooks/: __init__.py  session_end.py
docs/: PLANNING.md
docs/agents/: README.md
tests/: test_aggregate.py  test_claude_code_adapter.py  test_cli.py  test_events.py  test_hook_session_end.py  test_install_hook.py  test_storage.py  test_whitelist.py
tests/fixtures/claude-code/: session_empty.jsonl  session_rich.jsonl
